<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".accountActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/accountprofilepic"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/accountusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:text="@string/user_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/accountstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="234dp"
        android:text="@string/hi_this_is_my_first_time_here"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/accountpicbutton"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="133dp"
        android:background="@color/colorPrimary"
        android:text="@string/change_profile_photo" />

    <Button
        android:id="@+id/accountstatusbutton"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:background="@android:color/white"
        android:text="@string/change_status" />

</RelativeLayout>