<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".startActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/this_is_start_page"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/startregbutton"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="114dp"
        android:background="@android:color/white"
        android:text="@string/need_account" />

    <Button
        android:id="@+id/startloginbutton"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="179dp"
        android:background="@color/colorAccent"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white" />
</RelativeLayout>